<resources>
    <string name="app_name">GOODMOOD</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="lang_en">EN</string>
    <string name="app_logo_description">App logo</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="entry">New entry</string>
    <string name="charts">Charts</string>
    <string name="settings">Settings</string>
    <string name="general_header">General</string>
    <string name="notifications_header">Notifications</string>
    <string name="appearance_header">Appearance</string>
    <string name="data_header">Data</string>

    <string name="signature_title">Your signature</string>
    <string name="language_title">Language</string>
    <string name="highlight_title">Highlight days with notes</string>
    <string name="notification_sending_title">Send notifications</string>
    <string name="notification_remove_title">Remove notifications</string>
    <string name="theme_title">Theme</string>
    <string name="color_scheme_title">Current color scheme</string>
    <string name="saved_color_presets_title">Saved color Schemes</string>
    <string name="color_presets_title">Presets</string>
    <string name="notifications_title">Notifications</string>

    <string name="language_preference_key">language</string>
    <string name="notifications_switch_preference_key">notifications</string>
    <string name="notification_time_preference_key">notifications_time</string>
    <string name="notification_remove_preference_key">notification_remove</string>
    <string name="log_out_preference_key">log_out</string>

    <string name="new_notification_button_text">Add new notification</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_here">Email Address</string>
    <string name="password_here">Password</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="emoji">emoji</string>
    <string name="slider">slider</string>
    <string name="terrible_point">terrible_point</string>
    <string name="bad_point">bad_point</string>
    <string name="neutral_point">neutral_point</string>
    <string name="good_point">good_point</string>
    <string name="slider_thumb">slider_thumb</string>
    <string name="tick">tick</string>

    <string name="deletion_toast">Entry deleted successfully</string>
    <string name="get_entries_fail">Failed to get entries></string>
    <string name="no_entries">No entries for this day</string>
    <string name="plus">+</string>
    <string name="tag_already_exists">The tag already exists</string>
    <string name="terrible">Terrible</string>
    <string name="bad">Bad</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="note">Note</string>
    <string name="add_tag">Add tag</string>
    <string name="selected_tags">Selected tags</string>
    <string name="mood">Mood</string>
    <string name="tags">Tags</string>
    <string name="terrible_mood">Terrible</string>
    <string name="bad_mood">Bad</string>
    <string name="neutral_mood">Neutral</string>
    <string name="good_mood">Good</string>
    <string name="perfect_mood">Perfect</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>

    <string name="mood_pie_chart_title">Mood in the last week</string>
    <string name="tags_pie_chart_title">Most popular tags in the last week</string>
    <string name="tag_name_too_long">The tag name is too long</string>
    <string name="notification_time_title">Notifications\' time</string>
    <string name="log_out_title">Log out</string>
    <string name="confirm">Set</string>
    <string name="cancel">Cancel</string>

    <string name="color_settings_title">Change colors</string>
    <string name="very_bad_color_title">Very bad mood</string>
    <string name="bad_color_title">Bad mood</string>
    <string name="neutral_color_title">Neutral mood</string>
    <string name="good_color_title">Good mood</string>
    <string name="very_good_color_title">Very good mood</string>
    <string name="color_settings_key">color</string>
    <string name="mood_colors_category_title">Mood colors</string>
    <string name="reset_colors_title">Reset colors</string>
    <string name="reset_colors_key" translatable="false">reset_colors</string>
    <string name="very_good_color_preference_key" translatable="false">very_good_color_preference_key</string>
    <string name="good_color_preference_key" translatable="false">good_color_preference_key</string>
    <string name="neutral_color_preference_key" translatable="false">neutral_color_preference_key</string>
    <string name="bad_color_preference_key" translatable="false">bad_color_preference_key</string>
    <string name="very_bad_color_preference_key" translatable="false">very_bad_color_preference_key</string>
</resources>
