<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/currentDayFragment"
        android:enabled="true"
        android:icon="@drawable/ic_today"
        android:title="@string/today" />
    <item
        android:id="@+id/calendarFragment"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/entryFragment"
        android:enabled="true"
        android:titleCondensed=""
        android:title=""/>
    <item
        android:id="@+id/chartsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_charts"
        android:title="@string/charts"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>