<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/mood_slider__track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_slider__track"
        android:layout_gravity="center"
        android:contentDescription="@string/slider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/mood_slider__terrible_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/terrible_point" />

        <ImageView
            android:id="@+id/mood_slider__bad_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_track_point"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/mood_slider__terrible_point"
            app:layout_constraintEnd_toStartOf="@id/mood_slider__neutral_point"
            android:contentDescription="@string/bad_point" />

        <ImageView
            android:id="@+id/mood_slider__neutral_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_track_point"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/mood_slider__terrible_point"
            app:layout_constraintEnd_toStartOf="@id/mood_slider__excellent_point"
            android:contentDescription="@string/neutral_point" />

        <ImageView
            android:id="@+id/mood_slider__good_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_track_point"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/mood_slider__neutral_point"
            app:layout_constraintEnd_toStartOf="@id/mood_slider__excellent_point"
            android:contentDescription="@string/good_point" />

        <ImageView
            android:id="@+id/mood_slider__excellent_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/excellent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_slider__thumb"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/slider_thumb" />

</FrameLayout>
