<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragment_login__app_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_app_logo"
            app:layout_constraintBottom_toTopOf="@id/fragment_login__app_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.4"
            android:contentDescription="@string/app_logo_description" />

        <TextView
            android:id="@+id/fragment_login__app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_name_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login__app_logo_image"
            android:shadowColor="@color/blue"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_login__login_button"
            style="@style/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/login"

            android:textColor="@color/light_blue"
            app:layout_constraintBottom_toTopOf="@id/fragment_login__sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_login__sign_up_button"
            style="@style/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            android:text="@string/sign_up"
            android:layout_marginBottom="20dp"

            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/fragment_login__google_sign_in_button"
            app:layout_constraintEnd_toEndOf="@id/fragment_login__login_button"
            app:layout_constraintStart_toStartOf="@id/fragment_login__login_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_login__login_button" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/fragment_login__google_sign_in_button"

            style="@style/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/fragment_login__sign_up_button"
            app:layout_constraintStart_toStartOf="@id/fragment_login__sign_up_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_login__sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
